--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <title>Desafio-Router</title>
     
     <!-- VINCULO LOS ARCHIVOS TS Y CSS DE INDEX -->
-    <script defer type="module" src="index.ts"></script>
-    <link rel="stylesheet" href="index.css">
+    <script defer type="module" src="./index.ts"></script>
+    <link rel="stylesheet" href="./index.css">
 
     
 
